# ruff-quickfix

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  default.nix  pyproject.toml  shell.nix  tox.ini
.github/workflows/: tox.yml
extras/: README.md  python.lua  python.vim  python_lint.lua  python_lint.vim  ruff-quickfix
src/ruff_quickfix/: __init__.py  __main__.py  cli.py  lint.py  main.py
tests/: __init__.py  temp_file.py  test_cli.py
